[tool.poetry]
name = "cd-test-summary"
version = "0.1.0"
description = ""
authors = ["Qingchuan Ma <qingchuan.ma@nuance.com>"]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^2.6"
flask = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
flake8 = "^3.7"
yapf = "^0.27.0"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
